refactor source codes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyCurrencyConveter</string>
+    <string name="app_name">MyCurrencyConverter</string>
     <string name="symbol_equal">=</string>
     <string name="one">1</string>
 </resources>
