--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MyCurrencyConverter</string>
     <string name="symbol_equal">=</string>
     <string name="one">1</string>
+    <string name="triple_dash">---</string>
 </resources>
