--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MyCurrencyConverter</string>
+    <string name="app_name_short">Converter</string>
     <string name="symbol_equal">=</string>
     <string name="one">1</string>
     <string name="triple_dash">---</string>
