--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="symbol_equal">=</string>
     <string name="one">1</string>
     <string name="triple_dash">---</string>
+    <string name="your_desired_amount">Your desired amount</string>
 </resources>
